postgres_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-vl
          persistentVolumeClaim:
              claimName: postgres-pvc
      containers:
      - name: postgres
        image: postgres:10.13
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgres-vl
            mountPath: /var/lib/postgresql/data
