redmine_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-deployment
spec:
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - name: redmine
        image: redmine:4.1.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
