postgres-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-serv
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
